--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,9 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
                 <configuration>
+                        <systemPropertyVariables>
+                            <platform>${env.USER}</platform>
+                        </systemPropertyVariables>
                     <testFailureIgnore>false</testFailureIgnore>
                 </configuration>
             </plugin>
