--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,5 @@
-language: android
-jdk: oraclejdk8
-
-android:
-  components:
-    - build-tools-25.0.1
-
-before_script:
-  # Create and start emulator
-  - echo no | android create avd --force -n test -t android-16 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
+language: objective-c
+osx_image: xcode8
+xcode_sdk: iPhone 7
 
 script: mvn install -Denv.USER=ANDROID
